Fix input sizes and other alignments

--- a/style.css
+++ b/style.css
@@ -6,13 +6,14 @@ body {
 .right {
   display: flex;
   flex-direction: column;
-  padding-left: 2rem;
   padding-top: 4rem;
+  flex: 2;
 }
 
 .toptext {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: bold;
+  padding-left: 2rem;
 }
 
 .odin {
@@ -40,6 +41,8 @@ input {
   border: 2px solid #E5E7EB;
   border-radius: 3px;
   outline: none;
+  width: 120%;
+
 }
 
 
@@ -58,14 +61,14 @@ input:focus {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 35vw;
   height: 100vh;
   margin: 0;
+  flex: 1;
 }
 
 .inputform div {
   display: flex;
-  gap: 1rem;
+  gap: 5rem;
 }
 
 label {
@@ -77,4 +80,9 @@ label {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  background-color: white;
+  padding-left: 2rem;
+  padding-bottom: 2rem;
+  box-shadow: 2px solid black;
+  width: 100%;
 }
